# qin-mingyuan

寒假深度学习/2.1/: clss.py  main.py
第三次任务提交/代码/任务1/: CMakeLists.txt  main.cpp
第三次任务提交/代码/任务2/2.2/: CMakeLists.txt  main.cpp
第三次任务提交/代码/任务3/3.1/: CMakeLists.txt  main.cpp
第三次任务提交/代码/任务3/3.2/: CMakeLists.txt  main.cpp
第三次任务提交/报告/: 第三次任务.md  第三次报告.md
第二次任务提交/第二次任务提交/第二次任务提交/代码/任务1/no1/: .CMakeList.txt.swp  main.cpp
第二次任务提交/第二次任务提交/第二次任务提交/代码/任务2/no3/: CMakeLists.txt  main.cpp
第二次任务提交/第二次任务提交/第二次任务提交/代码/任务3/no2/: CMakeLists.txt  main.cpp
第二次任务提交/第二次任务提交/第二次任务提交/报告/: 第二次任务.md
第四次任务提交/代码/低通滤波/no2/: CMakeLists.txt  Simulator.hpp  main.cpp
第四次任务提交/代码/卡尔曼滤波/no1/: CMakeLists.txt  KalmanFilter.hpp  Simulator.hpp  main.cpp
