cmake_minimum_required(VERSION 3.2)
project(task3)
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "   OpenCV Version: ${OpenCV_VERSION}")
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_CXX_STANDARD 14)
add_executable(main main.cpp)
target_link_libraries(main ${OpenCV_LIBS})
